[gd_scene load_steps=15 format=3 uid="uid://dus614khw11h2"]

[ext_resource type="Script" uid="uid://crika1mdfvjsw" path="res://script/option.gd" id="1_jx2e8"]
[ext_resource type="PackedScene" uid="uid://bgnvqj8xi6u7e" path="res://scene/volumn.tscn" id="1_volumn"]
[ext_resource type="FontFile" uid="uid://cth4t0ug4hwm8" path="res://font/Inter/static/Inter_24pt-Black.ttf" id="2_font"]
[ext_resource type="Texture2D" uid="uid://btbmgtdbgtpkm" path="res://asset/largeCntnrs1.png" id="2_i838a"]
[ext_resource type="FontFile" uid="uid://bt41csp00hdy7" path="res://font/Inter/Inter-VariableFont_opsz,wght.ttf" id="3_i838a"]
[ext_resource type="Texture2D" uid="uid://c2l6gc1ro012y" path="res://asset/SmallCntnrs3.png" id="6_70qle"]
[ext_resource type="Texture2D" uid="uid://bphdbktqgumws" path="res://asset/contact.png" id="7_fyn3v"]

[sub_resource type="StyleBoxFlat" id="StyleBox_tab_unselected"]
bg_color = Color(0, 0, 0, 0)
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id="StyleBox_tab_selected"]
bg_color = Color(0.2, 0.2, 0.2, 0.5)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.956863, 0.521569, 0.007843, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="ButtonGroup" id="ButtonGroup_language"]

[sub_resource type="ButtonGroup" id="ButtonGroup_pause"]

[sub_resource type="SystemFont" id="SystemFont_lkh8f"]
font_names = PackedStringArray("SF Pro")

[sub_resource type="SystemFont" id="SFPro"]
font_names = PackedStringArray("SF Pro")

[sub_resource type="SystemFont" id="SystemFont_i838a"]
font_names = PackedStringArray("SF Pro")

[node name="option" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jx2e8")

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.0901961, 0.129412, 0.141176, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -256.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="border" type="TextureRect" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_i838a")
stretch_mode = 2

[node name="tab_container" type="TabContainer" parent="VBoxContainer/MarginContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/side_margin = 100
theme_override_fonts/font = ExtResource("3_i838a")
theme_override_font_sizes/font_size = 32
theme_override_styles/tab_unselected = SubResource("StyleBox_tab_unselected")
theme_override_styles/tab_selected = SubResource("StyleBox_tab_selected")
current_tab = 1

[node name="Languages" type="VBoxContainer" parent="VBoxContainer/MarginContainer/tab_container"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Language" type="Label" parent="VBoxContainer/MarginContainer/tab_container/Languages"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "
"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/tab_container/Languages"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="LanguageContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/tab_container/Languages/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TraditionalChineseButton" type="CheckButton" parent="VBoxContainer/MarginContainer/tab_container/Languages/MarginContainer/LanguageContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
button_group = SubResource("ButtonGroup_language")
text = "繁体"

[node name="SimplifiedChineseButton" type="CheckButton" parent="VBoxContainer/MarginContainer/tab_container/Languages/MarginContainer/LanguageContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
button_group = SubResource("ButtonGroup_language")
text = "简体"

[node name="JapaneseButton" type="CheckButton" parent="VBoxContainer/MarginContainer/tab_container/Languages/MarginContainer/LanguageContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
button_group = SubResource("ButtonGroup_language")
text = "日本語"

[node name="EnglishButton" type="CheckButton" parent="VBoxContainer/MarginContainer/tab_container/Languages/MarginContainer/LanguageContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
button_pressed = true
button_group = SubResource("ButtonGroup_language")
text = "English"

[node name="Drills" type="VBoxContainer" parent="VBoxContainer/MarginContainer/tab_container"]
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/tab_container/Drills"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="DrillContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/tab_container/Drills/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RandomSequenceButton" type="CheckButton" parent="VBoxContainer/MarginContainer/tab_container/Drills/MarginContainer/DrillContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "Random Sequence
"

[node name="AutoRestartButton" type="CheckButton" parent="VBoxContainer/MarginContainer/tab_container/Drills/MarginContainer/DrillContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "Auto Restart
"

[node name="AutoRestartPauseContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/tab_container/Drills/MarginContainer/DrillContainer"]
layout_mode = 2

[node name="Pause5sButton" type="CheckButton" parent="VBoxContainer/MarginContainer/tab_container/Drills/MarginContainer/DrillContainer/AutoRestartPauseContainer"]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_pause")
text = "Pause 5s"

[node name="Pause10sButton" type="CheckButton" parent="VBoxContainer/MarginContainer/tab_container/Drills/MarginContainer/DrillContainer/AutoRestartPauseContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_pause")
text = "Pause 10s"

[node name="About" type="HBoxContainer" parent="VBoxContainer/MarginContainer/tab_container"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Right" type="VBoxContainer" parent="VBoxContainer/MarginContainer/tab_container/About"]
layout_mode = 2
size_flags_horizontal = 3

[node name="top" type="MarginContainer" parent="VBoxContainer/MarginContainer/tab_container/About/Right"]
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 20

[node name="Contact" type="TextureRect" parent="VBoxContainer/MarginContainer/tab_container/About/Right/top"]
layout_mode = 2
texture = ExtResource("7_fyn3v")

[node name="Bottom" type="MarginContainer" parent="VBoxContainer/MarginContainer/tab_container/About/Right"]
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_right = 20

[node name="SmallCntnrs3" type="TextureRect" parent="VBoxContainer/MarginContainer/tab_container/About/Right/Bottom"]
layout_mode = 2
texture = ExtResource("6_70qle")

[node name="EmailLabel" type="Label" parent="VBoxContainer/MarginContainer/tab_container/About/Right/Bottom"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_lkh8f")
text = "kai.yang@grwolftactical.com"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Left" type="VBoxContainer" parent="VBoxContainer/MarginContainer/tab_container/About"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/tab_container/About/Left"]
layout_mode = 2
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 50

[node name="DescriptionLabel" type="RichTextLabel" parent="VBoxContainer/MarginContainer/tab_container/About/Left/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = SubResource("SFPro")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "The Grwolf Smart Target is designed for shooting enthusiasts who want a convenient solution for practicing with airsoft or Laser Dry Fire at home, eliminating the hassle of going to the shooting range. Compared to the traditional target, the device has the following features, 
* Real-time hit point display allows you to track and score your shots instantly.
* Choose different drills with the same device, such as high-speed shooting and free shooting, to enhance your shooting experience.
"
fit_content = true

[node name="CopyrightLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = SubResource("SystemFont_i838a")
text = "© 2025 FlexTarget IPSC@Grwolf.com"
horizontal_alignment = 1

[node name="VolumeControl" parent="." instance=ExtResource("1_volumn")]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -420.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
